--- a/assignment-4/src/index.css
+++ b/assignment-4/src/index.css
@@ -1,1 +1,20 @@
+#container {
+    width: 100%;
+    height: 100%;
+    display: flex;
+}
 
+#left {
+    width: 50%;
+    height: 100%;
+}
+
+#right {
+    width: 50%;
+    height: 100%;
+}
+
+.image {
+    width: 75%;
+    height: 75%;
+}
